# temporal-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
crates/temporal_core/: Cargo.toml  build.rs
crates/temporal_core/src/: calendar.rs  duration.rs  iso.rs
crates/temporal_intl/: Cargo.toml
crates/temporal_intl/src/: lib.rs
docs/: diff-with-ecma.md
src/: calendar.rs  duration.rs  iso.rs  lib.rs  plain.rs  timezone.rs  zoned.rs
src/calendar/: impls.rs
src/timezone/: timezone_impl.rs
